# real-env

./: .gitignore  README.md  env.yaml  pyproject.toml
real_env/agents/: base_agent.py  heuristic_agent.py  interpolator_utils.py  longhist_policy_agent.py  policy_agent.py  spacemouse_agent.py
real_env/agents/heuristic_agents/: casting_agent.py
real_env/common/: constants.py  data_classes.py  interpolator.py
real_env/configs/agents/: casting_agent.yaml  heuristic_agent.yaml  longhist_policy_agent.yaml  policy_agent.yaml  policy_agent_action_replay.yaml  spacemouse_agent.yaml
real_env/configs/controllers/: arx5_cartesian.yaml  arx5_left.yaml  arx5_right.yaml  ur5_cartesian.yaml  wsg50.yaml
real_env/configs/peripherals/: gopro0.yaml  iphone_third.yaml  iphone_wrist.yaml  iphone_wrist_left.yaml  iphone_wrist_right.yaml  webcam0.yaml  webcam1.yaml
real_env/configs/tasks/: iphumi_arx5.yaml  iphumi_arx5_bimanual.yaml  iphumi_arx5_bimanual_action_replay.yaml  iphumi_arx5_place_back.yaml  (+12 more)
real_env/controllers/: arx5_cartesian.py  base_controller.py  base_controller_client.py  ur5_cartesian.py  ur5_joint.py  wsg50.py  wsg50_scripts.lua
real_env/peripherals/: base_camera.py  iphone.py  webcam.py
real_env/tasks/: base_task.py  iphumi_arx5_bimanual_task.py  iphumi_arx5_task.py  iphumi_ur5_task.py  iterative_casting.py  umi_arx5_task.py  umi_ur5_task.py
real_env/utils/: attempt_counting_util.py  cup_task_utils.py  pose_visualizer.py  qr_code_util.py  umi_utils.py
scripts/: calibrate_camera_latency.py  create_rollout_video.py
shell_scripts/: kill_all_processes.sh
